@@ -3,6 +3,7 @@ by Alex Rabe & NextGEN DEV Team
 
 V1.1.0
 - NEW : Define number of columns inside the gallery
+- NEW : Added pagination for galleries and images in admin section
 - Bugfix : Clean up mode for singlepic
 
 V1.0.2 - 19.12.2008
